ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.18
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Repl 2022-09-19, Repl 2022-10-03
    • 102
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Affects 4.4 (observed on 4.4.17-rc0), doesn't seem to affect 4.2 (doesn't reproduce on 4.2.22). Doesn't affect 5.0+ as support for majority read concern is always on.

      Behaviour:

      • Multi-doc txn with txnNumber:0 and readConcern: { level: 'majority' }

        returns "Given transaction number 0 does not match any in-progress transactions".

        • I believe it should return "Majority read concern is not enabled" instead.
      • Multi-doc txn with txnNumber:0 and readConcern: { level: 'majority' }

        and allowSpeculativeMajorityRead: true returns "Given transaction number 0 does not match any in-progress transactions".

        • I believe it should return "Majority read concern is not enabled" instead.
      • Multi-doc txn with txnNumber: 1 and readConcern: { level: 'majority' }

        : aborts with "Majority read concern is not enabled"

        • This is expected.
      • Multi-doc txn with txn txnNumber:1 and readConcern: { level: 'majority' }

        and allowSpeculativeMajorityRead: true crashes the server.

        • I believe it should return "Majority read concern is not enabled" instead.

       

            Assignee:
            Ali Mir
            Reporter:
            Josef Ahmad
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: