SERVER-69443 Disallow speculative majority find operations in transactions